k8s/todo-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-web
  labels:
    app: todo-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-web
  template:
    metadata:
      labels:
        app: todo-web
    spec:
      containers:
      - name: todo-web
        image: jagardaniel/todo-web:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: todo-web
spec:
  selector:
    app: todo-web
  ports:
  - port: 8080
