k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
spec:
  rules:
    - host: k8s-test.bottenskrap.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-web
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: todo-api
                port:
                  number: 8000
